# GyanIntent_v2

./: .env.example  .gitignore  README.md  aws_streaming.py  aws_transcribe_handler.py  config.py  debug_output.txt  debug_output_2.txt  deepgram_streaming.py  deepgram_stt.py  deepgram_tts.py  generate_manim_code.py  merge_with_ffmpeg.py  pipecat_tutor.py  pipeline.py  record_audio.py  requirements.txt  run_manim.py  speech_to_text.py  test_dg_ws.py  text_to_speech.py
Gyan_Intent/backend/: Dockerfile  add_audio_to_six_frontend_videos.py  fix_mathtex.py  fix_three_topic_videos_deterministic.py  generate_six_voiced_videos.py  pyproject.toml  railway.toml  rebuild_three_long_videos.py  regenerate_three_topic_videos.py  render.yaml  requirements.txt  test_60s_video.py  test_manim_audio_e2e.py  test_pipeline_tts_only.py  test_sarvam_tts.py
Gyan_Intent/backend/agents/: __init__.py  graph.py  state.py  supervisor.py
Gyan_Intent/backend/agents/teams/: __init__.py  coding_team.py  math_team.py  video_team.py  visual_team.py
Gyan_Intent/backend/agents/tools/: manim_debug_agent.py
Gyan_Intent/backend/app/: __init__.py  config.py  main.py
Gyan_Intent/backend/app/api/v1/: router.py
Gyan_Intent/backend/app/api/v1/endpoints/: auth.py  classroom.py  health.py  intent.py  quiz.py  transcript.py  video.py  (+1 more)
Gyan_Intent/backend/app/core/: logging.py
Gyan_Intent/backend/app/services/: gemini.py  google_classroom.py  youtube_transcript.py
Gyan_Intent/backend/video_factory/: __init__.py  pipeline.py
Gyan_Intent/backend/workers/: celery_app.py  video_tasks.py  whatsapp_tasks.py
(+90 files in other folders)
